manifests/mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greymatter
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
