manifests/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: team-a
  annotations:
    greymatter.io/egress-http-external: |-
      [
        {
          "name": "elasticsearch:443",
          "host": "vpc-cap-one-demo-7tni5s65y4ej7qldbp4wvcmegi.us-east-1.es.amazonaws.com,
          "port": 443
        }
      ]
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: gm-proxy
        image: gm-proxy
        ports:
          - name: proxy
            containerPort: 10808
            protocol: TCP 
        resources: {}
