manifests/greymatter-sync.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: greymatter-sync-team-a
  namespace: greymatter
  annotations:
    greymatter.io/egress-http-local: '["control", "catalog"]'
spec:
  selector:
    matchLabels:
      app: greymatter-sync-team-a
  serviceName: greymatter-sync-team-a
  replicas: 1
  template:
    metadata:
      labels:
        app: greymatter-sync-team-a
    spec:
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
      - name: gm-docker-secret
      volumes:
      - name: ssh-private-key
        secret:
          secretName: greymatter-sync-secret-team-a
      containers:
      - name: service
        image: docker.greymatter.io/internal/cli:sync
        imagePullPolicy: Always
        command: ["/usr/local/bin/greymatter"]
        args:
        - "-c"
        - "/etc/greymatter/config.toml"
        - "sync"
        - "--cue"
        - "--git"
        - "--forever"
        - "--interval"
        - "30s"
        - "--git-dir"
        - "/var/lib/greymatter/checkout"
        volumeMounts:
        - name: ssh-private-key
          readOnly: true
          mountPath: "/var/lib/greymatter/.ssh"
