manifests/observables-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observables-app
  namespace: default
  labels:
    greymatter.io/cluster: observables-app
    app: observables-app
spec:
  selector:
    matchLabels:
      greymatter.io/cluster: observables-app
      app: observables-app
  template:
    metadata:
      labels:
        app: observables-app
        greymatter.io/cluster: observables-app
    spec:
      containers:
      - name: service
        image: docker.greymatter.io/internal/observables-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
