manifests/vector-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vector

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vector-agent
  namespace: vector
  labels:
    app.kubernetes.io/instance: vector
    app.kubernetes.io/name: vector-agent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: vector
      app.kubernetes.io/name: vector-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vector
        app.kubernetes.io/name: vector-agent
        vector.dev/exclude: 'true'
    spec:
      containers:
        - name: vector
          image: timberio/vector:0.16.1-debian
          args:
            - '--config-dir'
            - /etc/vector/
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: var-log
              readOnly: true
              mountPath: /var/log/
            - name: var-lib
              readOnly: true
              mountPath: /var/lib
            - name: data-dir
              mountPath: /vector-data-dir
            - name: config-dir
              readOnly: true
              mountPath: /etc/vector
            - name: procfs
              readOnly: true
              mountPath: /host/proc
            - name: sysfs
              readOnly: true
              mountPath: /host/sys
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext: {}
      volumes:
        - name: var-log
          hostPath:
            path: /var/log/
            type: ''
        - name: var-lib
          hostPath:
            path: /var/lib/
            type: ''
        - name: data-dir
          hostPath:
            path: /var/lib/vector/
            type: ''
        - name: config-dir
          configMap:
            name: vector-agent-config
        - name: procfs
          hostPath:
            path: /proc
            type: ''
        - name: sysfs
          hostPath:
            path: /sys
            type: ''
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      dnsPolicy: ClusterFirst
      serviceAccountName: vector-agent
      serviceAccount: vector-agent
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  revisionHistoryLimit: 10
