manifests/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpressdb
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpressdb
  annotations:
    greymatter.io/ingress-tcp-port-name: mysql
  labels:
    greymatter.io/cluster: wordpressdb
    app: wordpressdb
spec:
  selector:
    matchLabels:
      greymatter.io/cluster: wordpressdb
      app: wordpressdb
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        greymatter.io/cluster: wordpressdb
        app: wordpressdb
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
