manifests/wordpress-deployment-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpressnew
  labels:
    app: wordpressnew
spec:
  ports:
    - port: 80
  selector:
    app: wordpressnew
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpressnew
  labels:
    greymatter.io/cluster: wordpressnew
    app: wordpressnew
  annotations:
    greymatter.io/egress-tcp-local: '["wordpressdb"]'
spec:
  selector:
    matchLabels:
      greymatter.io/cluster: wordpressnew
      app: wordpressnew
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        greymatter.io/cluster: wordpressnew
        app: wordpressnew
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpressnew-persistent-storage
          mountPath: /var/www/html
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "750m"
      volumes:
      - name: wordpressnew-persistent-storage
        persistentVolumeClaim:
          claimName: wp-new-pv-claim
