manifests/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  ports:
  - name: api
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
  serviceName: prometheus
  template:
    metadata:
      namespace: prometheus
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.7.1
        command:
        - /bin/prometheus
        args:
        - --query.timeout=4m
        - --query.max-samples=5000000000
        - --storage.tsdb.path=/var/lib/prometheus/data/data
        - --config.file=/etc/prometheus/prometheus.yaml
        - --web.console.libraries=/usr/share/prometheus/console_libraries
        - --web.console.templates=/usr/share/prometheus/consoles
        - --web.enable-admin-api
        - --web.external-url=http://anything
        - --web.route-prefix=/
        ports:
        - containerPort: 9090
          name: api
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
        - name: prometheus-pvc
          mountPath: /var/lib/prometheus/data
        resources: {}
      securityContext:
        fsGroup: 2000
      serviceAccountName: prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
          defaultMode: 420
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: prometheus-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 80Gi
      storageClassName: kops-ssd-1-17
      volumeMode: Filesystem
